metadata-classic/objects/becquerel_tt_user_for_tack__x.object
<CustomObject>
    <description>becquerel__tt_user_for_tack</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__tt_user_for_tack</externalName>
    <fields>
        <fullName>cbsa__c</fullName>
        <description>cbsa</description>
        <externalDeveloperName>cbsa</externalDeveloperName>
        <label>cbsa</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_count__c</fullName>
        <description>employee_count</description>
        <externalDeveloperName>employee_count</externalDeveloperName>
        <label>employee_count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>estimated_contacts_available__c</fullName>
        <description>estimated_contacts_available</description>
        <externalDeveloperName>estimated_contacts_available</externalDeveloperName>
        <label>estimated_contacts_available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>managed_account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>managed_account</description>
        <externalDeveloperName>managed_account</externalDeveloperName>
        <label>managed_account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>most_quoted_category__c</fullName>
        <description>most_quoted_category</description>
        <externalDeveloperName>most_quoted_category</externalDeveloperName>
        <label>most_quoted_category</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>num_background_checks__c</fullName>
        <description>num_background_checks</description>
        <externalDeveloperName>num_background_checks</externalDeveloperName>
        <label>num_background_checks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_pictures__c</fullName>
        <description>num_pictures</description>
        <externalDeveloperName>num_pictures</externalDeveloperName>
        <label>num_pictures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>occupation__c</fullName>
        <description>occupation</description>
        <externalDeveloperName>occupation</externalDeveloperName>
        <label>occupation</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pct_of_contacts_for_top_three_pros_in_ma__c</fullName>
        <description>pct_of_contacts_for_top_three_pros_in_market</description>
        <externalDeveloperName>pct_of_contacts_for_top_three_pros_in_market</externalDeveloperName>
        <label>pct_of_contacts_for_top_three_pros_in_ma</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phn_phone_number__c</fullName>
        <description>phn_phone_number</description>
        <externalDeveloperName>phn_phone_number</externalDeveloperName>
        <label>phn_phone_number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pro_segment__c</fullName>
        <description>pro_segment</description>
        <externalDeveloperName>pro_segment</externalDeveloperName>
        <label>pro_segment</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revenue__c</fullName>
        <description>revenue</description>
        <externalDeveloperName>revenue</externalDeveloperName>
        <label>revenue</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revenue_last_12_months__c</fullName>
        <description>revenue_last_12_months</description>
        <externalDeveloperName>revenue_last_12_months</externalDeveloperName>
        <label>revenue_last_12_months</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revenue_last_3_months__c</fullName>
        <description>revenue_last_3_months</description>
        <externalDeveloperName>revenue_last_3_months</externalDeveloperName>
        <label>revenue_last_3_months</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reviews__c</fullName>
        <description>reviews</description>
        <externalDeveloperName>reviews</externalDeveloperName>
        <label>reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_business_name__c</fullName>
        <description>sav_business_name</description>
        <externalDeveloperName>sav_business_name</externalDeveloperName>
        <label>sav_business_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_notif_phn_phone_number__c</fullName>
        <description>sav_notif_phn_phone_number</description>
        <externalDeveloperName>sav_notif_phn_phone_number</externalDeveloperName>
        <label>sav_notif_phn_phone_number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_phn_phone_number__c</fullName>
        <description>sav_phn_phone_number</description>
        <externalDeveloperName>sav_phn_phone_number</externalDeveloperName>
        <label>sav_phn_phone_number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_delete_reason__c</fullName>
        <description>service_delete_reason</description>
        <externalDeveloperName>service_delete_reason</externalDeveloperName>
        <label>service_delete_reason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>top_competitor_reviews__c</fullName>
        <description>top_competitor_reviews</description>
        <externalDeveloperName>top_competitor_reviews</externalDeveloperName>
        <label>top_competitor_reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>top_pro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>top_pro</description>
        <externalDeveloperName>top_pro</externalDeveloperName>
        <label>top_pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>total_credit_balance__c</fullName>
        <description>total_credit_balance</description>
        <externalDeveloperName>total_credit_balance</externalDeveloperName>
        <label>total_credit_balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usa_state__c</fullName>
        <description>usa_state</description>
        <externalDeveloperName>usa_state</externalDeveloperName>
        <label>usa_state</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usa_zip_code_id__c</fullName>
        <description>usa_zip_code_id</description>
        <externalDeveloperName>usa_zip_code_id</externalDeveloperName>
        <label>usa_zip_code_id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_delete_reason__c</fullName>
        <description>user_delete_reason</description>
        <externalDeveloperName>user_delete_reason</externalDeveloperName>
        <label>user_delete_reason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_pk_id__c</fullName>
        <description>user_pk_id</description>
        <externalDeveloperName>user_pk_id</externalDeveloperName>
        <label>user_pk_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user_type__c</fullName>
        <description>user_type</description>
        <externalDeveloperName>user_type</externalDeveloperName>
        <label>user_type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_email__c</fullName>
        <description>usr_email</description>
        <externalDeveloperName>usr_email</externalDeveloperName>
        <label>usr_email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_first_name__c</fullName>
        <description>usr_first_name</description>
        <externalDeveloperName>usr_first_name</externalDeveloperName>
        <label>usr_first_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_is_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>usr_is_disabled</description>
        <externalDeveloperName>usr_is_disabled</externalDeveloperName>
        <label>usr_is_disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>usr_last_name__c</fullName>
        <description>usr_last_name</description>
        <externalDeveloperName>usr_last_name</externalDeveloperName>
        <label>usr_last_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_timezone__c</fullName>
        <description>usr_timezone</description>
        <externalDeveloperName>usr_timezone</externalDeveloperName>
        <label>usr_timezone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_url_code__c</fullName>
        <description>usr_url_code</description>
        <externalDeveloperName>usr_url_code</externalDeveloperName>
        <label>usr_url_code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_user_id__c</fullName>
        <description>usr_user_id</description>
        <externalDeveloperName>usr_user_id</externalDeveloperName>
        <label>usr_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zip_dst__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zip_dst</description>
        <externalDeveloperName>zip_dst</externalDeveloperName>
        <label>zip_dst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zip_timeoffset__c</fullName>
        <description>zip_timeoffset</description>
        <externalDeveloperName>zip_timeoffset</externalDeveloperName>
        <label>zip_timeoffset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>becquerel__tt_user_for_tack</label>
    <listViews>
        <fullName>XSearchForUser</fullName>
        <columns>ExternalId</columns>
        <columns>sav_business_name__c</columns>
        <columns>usr_first_name__c</columns>
        <columns>usr_last_name__c</columns>
        <columns>usr_email__c</columns>
        <columns>phn_phone_number__c</columns>
        <columns>sav_notif_phn_phone_number__c</columns>
        <columns>sav_phn_phone_number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExternalId</field>
            <operation>equals</operation>
            <value>25689578</value>
        </filters>
        <label>X - Search for User</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <pluralLabel>becquerel__tt_user_for_tack</pluralLabel>
</CustomObject>